fix header z-index & staff page padding

--- a/app/frontend/src/assets/css/main.css
+++ b/app/frontend/src/assets/css/main.css
@@ -331,6 +331,8 @@ a.rendered-text:hover {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+
+  z-index: 10;
 }
 
 .header.mobile {
